--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-requirements.txtflask
-flask-restful
-htcondor
-gunicorn
+Flask==2.2.2
+Flask-RESTful==0.3.9
+htcondor==10.2.0.post1
+gunicorn==20.1.0
